# Ikeru

./: .gitignore  .swiftlint.yml  CLAUDE.md  CREW.md  Secrets.xcconfig.example  TODO.md  project.yml
Ikeru/: Ikeru.entitlements  Info.plist
Ikeru.xcodeproj/: project.pbxproj
IkeruCore/: Package.swift
IkeruTests/: AdaptiveSessionViewModelTests.swift  AppLocaleTests.swift  CardReviewViewModelTests.swift  ConversationViewModelTests.swift  DailyTermViewModelTests.swift  DisplayModeEnvironmentTests.swift  DisplayModeSuggestionCardTests.swift  HandwritingViewModelTests.swift  HomeViewModelTests.swift  ImmersiveSessionViewTests.swift  KanaDrillViewModelTests.swift  KanjiStudyViewModelTests.swift  KanjiStudyViewStateTests.swift  ListeningIntegrationTests.swift  ListeningViewModelTests.swift  MonCrestTests.swift  NavigationCoordinatorTests.swift  PagedLearningStackTests.swift  ProfileViewModelTests.swift  RigJobsViewModelTests.swift  SessionConfigIntegrationTests.swift  SessionIntegrationTests.swift  SessionViewModelTests.swift  ShadowingIntegrationTests.swift  ShadowingViewModelTests.swift  StrokeOrderIntegrationTests.swift  StrokeOrderViewModelTests.swift  ToastManagerTests.swift
IkeruWidget/: IkeruWidgetBundle.swift  Info.plist  SessionLiveActivity.swift  StandByFlashcardWidget.swift
docs/: AUTH_SETUP.md  CI-SETUP.md  E2E_TEST_PLAN.md  (+2 more)
rig/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rig/src/ikeru_rig/: __init__.py  config.py  database.py  encoding.py  main.py  models.py  queue.py  voicevox.py
rig/tests/: conftest.py  test_jobs.py
(+472 files in other folders)
