[project]
name = "ikeru-rig"
version = "0.1.0"
description = "Local GPU bridge for Ikeru — wraps VOICEVOX and exposes a job queue REST API to the iPhone client."
requires-python = ">=3.12"
authors = [
    { name = "Nicolas Bataille" },
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.2",
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.34.0",
    "ruff==0.8.2",
    "mypy==1.13.0",
]

[project.scripts]
ikeru-rig = "ikeru_rig.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_decorators = false
